corrected spacing option b/w sections

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -459,42 +459,42 @@ main .section.bg-neutrals-20[data-bg-inside-container="true"] > div {
   padding: 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-none"] {
+main .section[data-sec-spacing="sec-spacing-none"] {
   padding: var(--spacing-0) 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-8"] {
+main .section[data-sec-spacing="sec-spacing-8"] {
   padding: var(--spacing-8) 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-12"] {
+main .section[data-sec-spacing="sec-spacing-12"] {
   padding: var(--spacing-12) 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-16"] {
+main .section[data-sec-spacing="sec-spacing-16"] {
   padding: var(--spacing-16) 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-20"] {
+main .section[data-sec-spacing="sec-spacing-20"] {
   padding: var(--spacing-20) 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-24"] {
+main .section[data-sec-spacing="sec-spacing-24"] {
   padding: var(--spacing-24) 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-28"] {
+main .section[data-sec-spacing="sec-spacing-28"] {
   padding: var(--spacing-28) 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-32"] {
+main .section[data-sec-spacing="sec-spacing-32"] {
   padding: var(--spacing-32) 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-48"] {
+main .section[data-sec-spacing="sec-spacing-48"] {
   padding: var(--spacing-48) 0;
 }
 
-main .section[data-bottom-spacing="sec-spacing-64"] {
+main .section[data-sec-spacing="sec-spacing-64"] {
   padding: var(--spacing-64) 0;
 }
